--- a/about.html
+++ b/about.html
@@ -2,14 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="/wllrg.rs2/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content=""><link href="https://fonts.googleapis.com/css?family=Mukta+Mahee%7CRaleway%7CPoppins%7CQuicksand:wght@500" rel="stylesheet" data-svelte="svelte-1kndhnl">
-	<link rel="stylesheet" href="/_app/immutable/assets/pages/__layout.svelte-78399f35.css">
-	<link rel="modulepreload" href="/_app/immutable/start-9833fb8f.js">
-	<link rel="modulepreload" href="/_app/immutable/chunks/index-99cc4964.js">
-	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-42e3d0d5.js">
-	<link rel="modulepreload" href="/_app/immutable/pages/about.svelte-32637235.js">
+	<link rel="stylesheet" href="/wllrg.rs2/_app/immutable/assets/pages/__layout.svelte-78399f35.css">
+	<link rel="modulepreload" href="/wllrg.rs2/_app/immutable/start-07541144.js">
+	<link rel="modulepreload" href="/wllrg.rs2/_app/immutable/chunks/index-99cc4964.js">
+	<link rel="modulepreload" href="/wllrg.rs2/_app/immutable/chunks/paths-396f020f.js">
+	<link rel="modulepreload" href="/wllrg.rs2/_app/immutable/pages/__layout.svelte-1e91726e.js">
+	<link rel="modulepreload" href="/wllrg.rs2/_app/immutable/pages/about.svelte-32637235.js">
 	</head>
 	<body>
 		<div>
@@ -17,23 +18,23 @@
 
 
 
-<div id="top" class="svelte-6qeya3"><div id="header" class="svelte-6qeya3"><a href="/" class="svelte-6qeya3"><div id="homelink" class="svelte-6qeya3"><img id="logo" src="/logo.png" alt="logo" class="svelte-6qeya3">Will Rogers</div></a>
-		<nav class="svelte-6qeya3"><ul class="svelte-6qeya3"><li class="svelte-6qeya3"><a href="/" class="svelte-6qeya3">home</a></li>
-				<li class="svelte-6qeya3"><a href="/about" class="svelte-6qeya3">about</a></li>
-				<li class="svelte-6qeya3"><a href="/links" class="svelte-6qeya3">links</a></li>
-				<li class="header-nav-item svelte-6qeya3"><a href="https://github.com/willrogers" class="svelte-6qeya3"><img class="header-nav-github svelte-6qeya3" src="/GitHub-Mark-64px.png" alt="github"></a></li>
-				<li class="header-nav-item svelte-6qeya3"><a href="https://twitter.com/wrgrs" class="svelte-6qeya3"><img class="header-nav-twitter svelte-6qeya3" src="/Twitter_Logo_Blue.png" alt="twitter"></a></li></ul></nav></div></div>
+<div id="top" class="svelte-6qeya3"><div id="header" class="svelte-6qeya3"><a href="/wllrg.rs2" class="svelte-6qeya3"><div id="homelink" class="svelte-6qeya3"><img id="logo" src="/wllrg.rs2/logo.png" alt="logo" class="svelte-6qeya3">Will Rogers</div></a>
+		<nav class="svelte-6qeya3"><ul class="svelte-6qeya3"><li class="svelte-6qeya3"><a href="/wllrg.rs2" class="svelte-6qeya3">home</a></li>
+				<li class="svelte-6qeya3"><a href="/wllrg.rs2/about" class="svelte-6qeya3">about</a></li>
+				<li class="svelte-6qeya3"><a href="/wllrg.rs2/links" class="svelte-6qeya3">links</a></li>
+				<li class="header-nav-item svelte-6qeya3"><a href="https://github.com/willrogers" class="svelte-6qeya3"><img class="header-nav-github svelte-6qeya3" src="/wllrg.rs2/GitHub-Mark-64px.png" alt="github"></a></li>
+				<li class="header-nav-item svelte-6qeya3"><a href="https://twitter.com/wrgrs" class="svelte-6qeya3"><img class="header-nav-twitter svelte-6qeya3" src="/wllrg.rs2/Twitter_Logo_Blue.png" alt="twitter"></a></li></ul></nav></div></div>
 
 <div id="main" class="svelte-6qeya3"><h2>About me</h2>
 <p>I am a software engineer.</p>
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="u9s9bw">
-		import { start } from "/_app/immutable/start-9833fb8f.js";
+		<script type="module" data-sveltekit-hydrate="xi7hzg">
+		import { start } from "/wllrg.rs2/_app/immutable/start-07541144.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="u9s9bw"]').parentNode,
-			paths: {"base":"","assets":""},
+			target: document.querySelector('[data-sveltekit-hydrate="xi7hzg"]').parentNode,
+			paths: {"base":"/wllrg.rs2","assets":"/wllrg.rs2"},
 			session: {},
 			route: true,
 			spa: false,
