--- a/clock.html
+++ b/clock.html
@@ -7,10 +7,10 @@
 		<meta http-equiv="content-security-policy" content=""><link href="https://fonts.googleapis.com/css?family=Mukta+Mahee%7CRaleway%7CPoppins%7CQuicksand:wght@500" rel="stylesheet" data-svelte="svelte-1kndhnl">
 	<link rel="stylesheet" href="/wllrg.rs2/_app/immutable/assets/pages/__layout.svelte-78399f35.css">
 	<link rel="stylesheet" href="/wllrg.rs2/_app/immutable/assets/pages/clock.svelte-33b7db30.css">
-	<link rel="modulepreload" href="/wllrg.rs2/_app/immutable/start-07541144.js">
+	<link rel="modulepreload" href="/wllrg.rs2/_app/immutable/start-53a2a738.js">
 	<link rel="modulepreload" href="/wllrg.rs2/_app/immutable/chunks/index-99cc4964.js">
 	<link rel="modulepreload" href="/wllrg.rs2/_app/immutable/chunks/paths-396f020f.js">
-	<link rel="modulepreload" href="/wllrg.rs2/_app/immutable/pages/__layout.svelte-1e91726e.js">
+	<link rel="modulepreload" href="/wllrg.rs2/_app/immutable/pages/__layout.svelte-d6a28e1d.js">
 	<link rel="modulepreload" href="/wllrg.rs2/_app/immutable/pages/clock.svelte-e0057309.js">
 	</head>
 	<body>
@@ -19,23 +19,23 @@
 
 
 
-<div id="top" class="svelte-6qeya3"><div id="header" class="svelte-6qeya3"><a href="/wllrg.rs2" class="svelte-6qeya3"><div id="homelink" class="svelte-6qeya3"><img id="logo" src="/wllrg.rs2/logo.png" alt="logo" class="svelte-6qeya3">Will Rogers</div></a>
-		<nav class="svelte-6qeya3"><ul class="svelte-6qeya3"><li class="svelte-6qeya3"><a href="/wllrg.rs2" class="svelte-6qeya3">home</a></li>
-				<li class="svelte-6qeya3"><a href="/wllrg.rs2/about" class="svelte-6qeya3">about</a></li>
-				<li class="svelte-6qeya3"><a href="/wllrg.rs2/links" class="svelte-6qeya3">links</a></li>
-				<li class="header-nav-item svelte-6qeya3"><a href="https://github.com/willrogers" class="svelte-6qeya3"><img class="header-nav-github svelte-6qeya3" src="/wllrg.rs2/GitHub-Mark-64px.png" alt="github"></a></li>
-				<li class="header-nav-item svelte-6qeya3"><a href="https://twitter.com/wrgrs" class="svelte-6qeya3"><img class="header-nav-twitter svelte-6qeya3" src="/wllrg.rs2/Twitter_Logo_Blue.png" alt="twitter"></a></li></ul></nav></div></div>
+<html lang="en"><div id="top" class="svelte-6qeya3"><div id="header" class="svelte-6qeya3"><a href="/wllrg.rs2" class="svelte-6qeya3"><div id="homelink" class="svelte-6qeya3"><img id="logo" src="/wllrg.rs2/logo.png" alt="logo" class="svelte-6qeya3">Will Rogers</div></a>
+			<nav class="svelte-6qeya3"><ul class="svelte-6qeya3"><li class="svelte-6qeya3"><a href="/wllrg.rs2" class="svelte-6qeya3">home</a></li>
+					<li class="svelte-6qeya3"><a href="/wllrg.rs2/about" class="svelte-6qeya3">about</a></li>
+					<li class="svelte-6qeya3"><a href="/wllrg.rs2/links" class="svelte-6qeya3">links</a></li>
+					<li class="header-nav-item svelte-6qeya3"><a href="https://github.com/willrogers" class="svelte-6qeya3"><img class="header-nav-github svelte-6qeya3" src="/wllrg.rs2/GitHub-Mark-64px.png" alt="github"></a></li>
+					<li class="header-nav-item svelte-6qeya3"><a href="https://twitter.com/wrgrs" class="svelte-6qeya3"><img class="header-nav-twitter svelte-6qeya3" src="/wllrg.rs2/Twitter_Logo_Blue.png" alt="twitter"></a></li></ul></nav></div></div>
 
-<div id="main" class="svelte-6qeya3"><h1 id="title" class="svelte-qhc6f8">A clock for Joseph</h1>
+	<div id="main" class="svelte-6qeya3"><h1 id="title" class="svelte-qhc6f8">A clock for Joseph</h1>
 <div id="clock" class="svelte-qhc6f8"><svg id="clock-svg" viewBox="0 0 104 104" xmlns="http://www.w3.org/2000/svg"><circle cx="52" cy="52" r="50" fill="none" stroke-width="2" stroke="black"></circle></svg>
-</div>
-</div>
+</div></div>
+</html>
 
 
-		<script type="module" data-sveltekit-hydrate="1c9ov0j">
-		import { start } from "/wllrg.rs2/_app/immutable/start-07541144.js";
+		<script type="module" data-sveltekit-hydrate="nqhn0e">
+		import { start } from "/wllrg.rs2/_app/immutable/start-53a2a738.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="1c9ov0j"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="nqhn0e"]').parentNode,
 			paths: {"base":"/wllrg.rs2","assets":"/wllrg.rs2"},
 			session: {},
 			route: true,
